base/builds/regulus/argocd/projects/linux-mirrors/manifests/ubuntu-mirrors/Deployment-nginx-ubuntu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ubuntu
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: nginx-ubuntu
      app.kubernetes.io/name: nginx-ubuntu
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nginx-ubuntu
        app.kubernetes.io/name: nginx-ubuntu
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 2Gi
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: web-content
        - mountPath: /etc/nginx/conf.d/default-location.conf
          name: nginx-default-location
          subPath: default-location.conf
      volumes:
      - name: nginx-default-location
        configMap:
          name: default-location-conf
          optional: false
      - name: web-content
        persistentVolumeClaim:
          claimName: ubuntu-mirror-root
