base/builds/regulus/argocd/projects/linux-mirrors/manifests/ubuntu-mirrors/Service-mirror-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: mirror-http
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: nginx-ubuntu
    app.kubernetes.io/name: nginx-ubuntu
  type: ClusterIP
