base/builds/regulus/argocd/projects/linux-mirrors/manifests/ubuntu-mirrors/HTTPRoute-ubuntu-mirror.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ubuntu
spec:
  hostnames:
  - ubuntu.apps.phalnet.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-ingress
    namespace: default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: mirror-http
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
